config(security): 更新CORS配置并添加前端Vite配置
- 移除Arrays导入并使用List.of替代Arrays.asList
- 将允许的来源从具体地址改为通配符模式http://localhost:*
- 设置允许的头部为通配符*以支持所有头部
- 添加前端项目的Vite配置文件
- 配置开发服务器端口为5173并设置代理到后端API
- 配置构建输出目录为Spring Boot静态资源目录

Signed-off-by: AbsoluteZero <186853152+AbsoluteZero001@users.noreply.github.com>